[gd_scene load_steps=4 format=3 uid="uid://1fuomhh3ul6v"]

[ext_resource type="Script" path="res://Scene/Enemy/enemy.gd" id="1_3evor"]
[ext_resource type="PackedScene" uid="uid://140itotwgnom" path="res://Scene/Enemy/enemy_skin.tscn" id="1_4vehy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p36o5"]
height = 2.36

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_3evor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18, 0)
shape = SubResource("CapsuleShape3D_p36o5")

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="EnemySkin" parent="CharacterRotationRoot" instance=ExtResource("1_4vehy")]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
height = 2.4
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
